# claudeworld-public

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  ClaudeWorld.spec  DEPLOYMENT.md  Makefile  README.md  en_readme.md  how_it_works.md  jp_readme.md  ko_readme.md  package-lock.json  plan.md  pyproject.toml  run.sh  setup.sh  sync.sh
.claude/agents/: agent-creator.md  backend-dev.md  frontend-dev.md  game-engineer.md  parallel-domain-impl.md  qa-engineer.md
.github/workflows/: release.yml
agents/: group_config.yaml.example
agents/group_gameplay/: group_config.yaml
agents/group_gameplay/Action_Manager/: characteristics.md  in_a_nutshell.md
agents/group_gameplay/Character_Designer/: characteristics.md  in_a_nutshell.md
agents/group_gameplay/Chat_Summarizer/: characteristics.md  in_a_nutshell.md
agents/group_gameplay/History_Summarizer/: characteristics.md  in_a_nutshell.md
agents/group_gameplay/Location_Designer/: characteristics.md
agents/group_gameplay/Onboarding_Manager/: characteristics.md  in_a_nutshell.md
agents/group_gameplay/Stat_Calculator/: characteristics.md  in_a_nutshell.md
agents/group_onboarding/: group_config.yaml
agents/group_onboarding/Onboarding_Manager/: characteristics.md  in_a_nutshell.md
agents/group_onboarding/World_Seed_Generator/: characteristics.md  in_a_nutshell.md
agents/group_subagent/: group_config.yaml
agents/group_subagent/Character_Designer/: characteristics.md  description.md
agents/group_subagent/Item_Designer/: characteristics.md  description.md  in_a_nutshell.md
agents/group_subagent/Location_Designer/: characteristics.md  description.md  in_a_nutshell.md
agents/group_subagent/detailed_character_designer/: characteristics.md  description.md  in_a_nutshell.md
agents/group_쓰르라미울적에/: extreme_traits.yaml
agents/group_쓰르라미울적에/레나/: characteristics.md  consolidated_memory.md  in_a_nutshell.md
agents/group_쓰르라미울적에/리카/: characteristics.md  consolidated_memory.md  in_a_nutshell.md  recent_events.md
agents/group_쓰르라미울적에/미온/: characteristics.md  consolidated_memory.md  in_a_nutshell.md
agents/group_쓰르라미울적에/시온/: characteristics.md  consolidated_memory.md  in_a_nutshell.md
agents/group_장송의프리렌/슈타르크/: anti_pattern.md  characteristics.md  consolidated_memory.md  in_a_nutshell.md
agents/group_장송의프리렌/페른/: anti_pattern.md  characteristics.md  consolidated_memory.md  in_a_nutshell.md  recent_events.md
agents/group_장송의프리렌/프리렌/: anti_pattern.md  characteristics.md  consolidated_memory.md  in_a_nutshell.md  recent_events.md
agents/group_장송의프리렌/플람메/: characteristics.md  in_a_nutshell.md
agents/group_회의실/: group_config.yaml
agents/group_회의실/토론_진행자/: anti_pattern.md  characteristics.md  consolidated_memory.md  in_a_nutshell.md
agents/group_회의실/화이트보드/: characteristics.md  in_a_nutshell.md
backend/: ARCHITECTURE.md  README.md  auth.py  background_scheduler.py  conftest.py  dependencies.py  launcher.py  main.py  models.py  pytest.ini  testing.py
backend/core/: __init__.py  app_factory.py  dependencies.py  logging.py  settings.py
backend/crud/: __init__.py  agents.py  cached.py  helpers.py  locations.py  messages.py  player_state.py  room_agents.py  rooms.py  worlds.py
backend/domain/: __init__.py  exceptions.py
backend/domain/entities/: __init__.py  agent.py  agent_config.py  gameplay_models.py  world_models.py
backend/domain/services/: __init__.py  access_control.py  item_validation.py  localization.py  memory.py  player_rules.py  player_state_serializer.py
backend/domain/value_objects/: __init__.py  action_models.py  contexts.py  enums.py  slash_commands.py  task_identifier.py
backend/i18n/: korean.py  timezone.py
backend/infrastructure/: auth.py  cache.py  locking.py  scheduler.py  sse.py  sse_ticket.py
backend/infrastructure/database/: __init__.py  connection.py  migrations.py  models.py  write_queue.py
backend/infrastructure/logging/: agent_logger.py  debug.yaml  formatters.py  perf_logger.py
backend/orchestration/: __init__.py  agent_ordering.py  chat_mode_orchestrator.py  context.py  conversation.py  gameplay_context.py  handlers.py  orchestrator.py  response_generator.py  trpg_orchestrator.py
backend/orchestration/tape/: __init__.py  executor.py  generator.py  models.py  trpg_generator.py
backend/routers/: __init__.py  agent_management.py  agents.py  auth.py  debug.py  mcp_tools.py  messages.py  readme.py  room_agents.py  rooms.py  sse.py
backend/routers/game/: __init__.py  actions.py  chat_mode.py  locations.py  polling.py  state.py  worlds.py
backend/schemas/: __init__.py  agents.py  common.py  game.py  messages.py  rooms.py
backend/sdk/: README.md  __init__.py
backend/sdk/agent/: __init__.py  agent_definitions.py  agent_manager.py  (+5 more)
backend/services/: __init__.py  agent_config_service.py  agent_factory.py  agent_filesystem_service.py  agent_service.py  cache_service.py  catalog_service.py  history_compression_service.py  item_service.py  location_service.py  location_storage.py  persistence_manager.py  player_service.py  prompt_builder.py  room_mapping_service.py  transient_state_service.py  world_reset_service.py  world_service.py
backend/tests/: README.md  __init__.py  conftest.py  testing.py
backend/utils/: __init__.py  conversation_utils.py  helpers.py  images.py  memory_parser.py  serializers.py  whiteboard.py
docs/: claude_soul_doc.md  deployment.md  how_it_works.md  jp_readme.md  ko_readme.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
scripts/: diagnose_traces.py  generate_icon.py  migrate_sqlite_to_postgres.py
scripts/deploy/: update_vercel_backend_url.sh
scripts/evaluation/: collect_answers.sh  evaluate_authenticity.sh  evaluate_parallel.sh  evaluate_responses.sh  generate_checklists.sh
scripts/setup/: generate_hash.py  setup_env.py
scripts/simulation/: simulate_chatroom.sh
scripts/testing/: README_LOAD_TEST.md  load_test_network.py  test_agent_questions.sh
(+216 files in other folders)
