[project]
name = "claudeworld-backend"
version = "0.1.0"
description = "Multi-Claude chat room application backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "APScheduler==3.10.4",
    "bcrypt==4.2.1",
    "PyJWT==2.10.1",
    "claude-agent-sdk==0.1.35",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "click==8.3.0",
    "distro==1.9.0",
    "docstring_parser==0.17.0",
    "fastapi==0.120.4",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.11.1",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "ruamel.yaml>=0.18.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.44",
    "starlette==0.49.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.38.0",
    "pytest>=8.3.3",
    "aiohttp",
    "Pillow>=10.0.0",
    "fastapi-mcp>=0.3.0",
    "aiosqlite>=0.21.0",
    "sse-starlette>=2.0.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.29.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "faker>=33.1.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.4",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
# Loose configuration for development
line-length = 120
target-version = "py311"

# Enable auto-fixing by default
fix = true

# Select minimal rule sets - focus on critical issues only
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
]

# Ignore common/minor issues
lint.ignore = [
    "E501",  # line too long (handled by formatter)
    "E712",  # comparison to True/False - allow == False for SQLAlchemy
    "E741",  # ambiguous variable name
    "E402",  # module level import not at top of file - allow for conditional imports
    "F841",  # local variable assigned but never used - common in tests
]

# Auto-fix these rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    "node_modules",
    "frontend",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.poe.tasks]
# Backend
backend = { shell = "cd backend && uvicorn main:app --reload --host 0.0.0.0 --port 8000", help = "Run backend dev server" }
backend-prod = { shell = "cd backend && uvicorn main:app --host 0.0.0.0 --port 8000", help = "Run backend production server" }

# Frontend
frontend-install = { shell = "cd frontend && npm install", help = "Install frontend dependencies" }
frontend-dev = { shell = "cd frontend && npm run dev", help = "Run frontend dev server" }
frontend-build = { shell = "cd frontend && npm run build", help = "Build frontend for production" }
frontend-lint = { shell = "cd frontend && npm run lint", help = "Lint frontend code" }
frontend-preview = { shell = "cd frontend && npm run preview", help = "Preview frontend production build" }

# Testing (default: unit tests without SDK to save memory)
test = { shell = "cd backend && pytest", help = "Run unit tests (excludes SDK tests)" }
test-sdk = { shell = "cd backend && pytest -m 'unit and sdk' --tb=short", help = "Run SDK tests (high memory)" }
test-unit-all = { shell = "cd backend && pytest -m unit --tb=short", help = "Run all unit tests including SDK" }
test-integration = { shell = "cd backend && pytest -m integration --tb=short", help = "Run integration tests" }
test-all = { shell = "cd backend && pytest -m 'unit or integration' --tb=short", help = "Run ALL tests (high memory)" }
test-cov = { shell = "cd backend && pytest --cov=backend --cov-report=term-missing", help = "Run tests with coverage" }
test-verbose = { shell = "cd backend && pytest -v", help = "Run tests verbose" }

# Installation
install-all = { shell = "uv sync && cd frontend && npm install", help = "Install all dependencies (backend + frontend)" }

# Build
build-exe = { shell = "cd frontend && npm run build && cd .. && pyinstaller ClaudeWorld.spec --noconfirm", help = "Build Windows executable" }

[tool.pyright]
# Configuration in pyrightconfig.json (IDE/Pylance compatibility)
# See pyrightconfig.json for full settings
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["backend"]
exclude = ["**/__pycache__", ".venv", "venv", "frontend", "dist", "build"]

# Disable SQLAlchemy ORM false positives (Column[T] coerces to T at runtime)
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportReturnType = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportUnknownMemberType = false
reportCallIssue = "none"

[tool.pytest.ini_options]
# Use auto mode for pytest-asyncio (no need for @pytest.mark.asyncio on every test)
asyncio_mode = "auto"
# Default asyncio fixture loop scope
asyncio_default_fixture_loop_scope = "function"
# Test discovery
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Default options: run unit tests (skip sdk tests which are memory intensive)
# Use `uv run pytest -m "unit and not sdk"` for unit tests (default)
# Use `uv run pytest -m unit` for all unit tests including SDK
# Use `uv run pytest -m integration` for integration tests
addopts = "-m 'unit and not sdk' --tb=short"
# Custom markers
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use database, more memory)",
    "db: Tests that use database fixtures (memory intensive)",
    "sdk: Tests that use Claude Agent SDK (very memory intensive)",
    "api: API endpoint tests",
    "crud: CRUD operation tests",
    "auth: Authentication tests",
]
# Suppress common warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
